# quik

./: CMakeLists.txt  ReadMe.md  package.xml
config/: kinova_jaco.yaml  kuka_iiwa7.yaml  kuka_kr6.yaml
include/quik/: IKSolver.hpp  Robot.hpp  geometry.hpp  ros_helpers.hpp  utilities.hpp
launch/: kr6.launch.py  sample_kr6_client.launch.py
python/: quik_service_helpers.py  sample_quik_client_node.py
src/: geometry.cpp  ros_helpers.cpp  ros_kinematics_service_node.cpp  sample_cpp_usage.cpp  sample_ros_client_node.cpp  sample_ros_cpp_node.cpp
srv/: FKService.srv  IKService.srv  JacobianService.srv
